# docs-assistant

./: .gitignore  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  plot.txt  pyproject.toml
src/common/: app.py  files-sorter.py  helper.py  langchain-examples.py  prompt-template-ex.py
src/file-sorter/: app.py
src/file-sorter/src/: helper.py
src/tim/github-agent/: README.md  github.py  main.py  notes.txt
