[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "docs-assitant"
version = "0.0.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "Liset Bastidas Gonzalez", email = "lisetbastidasg@gmal.com"}]

dependencies = [
  "tomli",
  "huggingface-hub==0.23.0",
  "langchain-community==0.2.0",
  "langchain-openai==0.1.7",
  "openai==1.30.2",
  "sentence-transformers==2.7.0",
  "ctransformers==0.2.27",
  "python-dotenv==1.0.1",
  "faiss-cpu==1.8.0"
]

[project.optional-dependencies]
ci = ["black", "coverage", "pylint", "flake8"]
cd = ["twine"]

[project.scripts]
doc-assist = "common.app:main"

[tool.black]
line-length = 79
use-tabs = false
tab-width = 2
